gridgraph: add color switcher

--- a/assets/html/gridgraph.html
+++ b/assets/html/gridgraph.html
@@ -21,6 +21,8 @@
           <p>
             <label>Crit1</label>
             <select id="crit1" class="criteria" onchange="reorderGrid()"></select>
+            <label>Color</label>
+            <input id="crit1-color" type="checkbox" onchange="switchGraphDecoration(this.checked)">
           </p>
           <p>
             <label>Crit2</label>
