--- a/assets/html/span.html
+++ b/assets/html/span.html
@@ -1,5 +1,5 @@
 <span class="tree" {span_att}>
-  <a href="{thread}" title="{subject}" target="_blank">
+  <a href="http://public-inbox.org/git/{thread}" title="{subject}" target="_blank">
     <img src="../assets/img/tree/{thread}.svg" />
   </a>
 </span>
