gridgraph: improve handling of DOM elements

--- a/assets/html/gridgraph.html
+++ b/assets/html/gridgraph.html
@@ -33,7 +33,7 @@
           <p>
           <label>Mode</label>
           <select id="mode" onchange="changeGridMode(this.value)">
-            <option value="list">Ordered List</option>
+            <option value="list" selected>Ordered List</option>
             <option value="table">Table</option>
           </select>
           </p>
@@ -41,6 +41,6 @@
       </form>
     </div>
 
-    <div id="grid">{grid}</div>
+    <div id="grid" class="noBorder">{grid}</div>
   </body>
 </html>
