gridgraph: reorganize dir structure

--- a/assets/html/gridgraph.html
+++ b/assets/html/gridgraph.html
@@ -3,8 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <script src="../assets/js/gridgraph.js"></script>
-    <link rel="stylesheet" type="text/css" href="../assets/css/gridgraph.css"><Paste>
+    <script src="../../assets/js/gridgraph.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../assets/css/gridgraph.css"><Paste>
     <title>GridGraph</title>
   </head>
 
