--- a/assets/html/span.html
+++ b/assets/html/span.html
@@ -1,5 +1,5 @@
 <span class="tree" onmouseover="displayToolTip(this)" onmouseout="hideToolTip()" {span_att}>
   <a href="http://public-inbox.org/git/{thread}" title="{subject}" target="_blank">
-    <img src="../assets/img/tree/{thread}.svg" />
+    <img src="../../assets/img/tree/{thread}.svg" />
   </a>
 </span>
